compiler/testData/diagnostics/nativeTests/dynamic.kt
// RUN_PIPELINE_TILL: FRONTEND

fun test(a: <!UNSUPPORTED!>dynamic<!>) = a
